fix spacing for words other than fr and en

--- a/src/components/ResponsiveLanding/responsiveLanding.css
+++ b/src/components/ResponsiveLanding/responsiveLanding.css
@@ -49,7 +49,7 @@
 .separator-desktop {
 	position: absolute;
 	top: 50%;
-	margin-left: -55px;
+	margin-left: -60px;
 	background-color: #fff;
 	padding-top: 15px;
 	padding-bottom: 15px;
